--- a/ml-assignment-5.ipynb
+++ b/ml-assignment-5.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4742ae61",
+   "id": "7f9a723c",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2022-10-07T11:06:18.748216Z",
-     "iopub.status.busy": "2022-10-07T11:06:18.747737Z",
-     "iopub.status.idle": "2022-10-07T11:06:18.765586Z",
-     "shell.execute_reply": "2022-10-07T11:06:18.765000Z"
+     "iopub.execute_input": "2022-10-07T12:10:59.232796Z",
+     "iopub.status.busy": "2022-10-07T12:10:59.232267Z",
+     "iopub.status.idle": "2022-10-07T12:10:59.250315Z",
+     "shell.execute_reply": "2022-10-07T12:10:59.249330Z"
     },
     "papermill": {
-     "duration": 0.026786,
-     "end_time": "2022-10-07T11:06:18.767789",
+     "duration": 0.029602,
+     "end_time": "2022-10-07T12:10:59.253476",
      "exception": false,
-     "start_time": "2022-10-07T11:06:18.741003",
+     "start_time": "2022-10-07T12:10:59.223874",
      "status": "completed"
     },
     "tags": []
@@ -54,19 +54,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "90cdc4f4",
+   "id": "4772306f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-07T11:06:18.777620Z",
-     "iopub.status.busy": "2022-10-07T11:06:18.777016Z",
-     "iopub.status.idle": "2022-10-07T11:06:20.040331Z",
-     "shell.execute_reply": "2022-10-07T11:06:20.039642Z"
+     "iopub.execute_input": "2022-10-07T12:10:59.266277Z",
+     "iopub.status.busy": "2022-10-07T12:10:59.265064Z",
+     "iopub.status.idle": "2022-10-07T12:11:00.955501Z",
+     "shell.execute_reply": "2022-10-07T12:11:00.954226Z"
     },
     "papermill": {
-     "duration": 1.270128,
-     "end_time": "2022-10-07T11:06:20.042452",
+     "duration": 1.699172,
+     "end_time": "2022-10-07T12:11:00.958314",
      "exception": false,
-     "start_time": "2022-10-07T11:06:18.772324",
+     "start_time": "2022-10-07T12:10:59.259142",
      "status": "completed"
     },
     "tags": []
@@ -96,19 +96,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2bc6e125",
+   "id": "a42d7f0d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-07T11:06:20.052819Z",
-     "iopub.status.busy": "2022-10-07T11:06:20.051747Z",
-     "iopub.status.idle": "2022-10-07T11:06:20.070031Z",
-     "shell.execute_reply": "2022-10-07T11:06:20.069077Z"
+     "iopub.execute_input": "2022-10-07T12:11:00.970092Z",
+     "iopub.status.busy": "2022-10-07T12:11:00.969405Z",
+     "iopub.status.idle": "2022-10-07T12:11:00.986282Z",
+     "shell.execute_reply": "2022-10-07T12:11:00.985294Z"
     },
     "papermill": {
-     "duration": 0.025614,
-     "end_time": "2022-10-07T11:06:20.072189",
+     "duration": 0.02584,
+     "end_time": "2022-10-07T12:11:00.988889",
      "exception": false,
-     "start_time": "2022-10-07T11:06:20.046575",
+     "start_time": "2022-10-07T12:11:00.963049",
      "status": "completed"
     },
     "tags": []
@@ -122,19 +122,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c14fa3e6",
+   "id": "4f044ee2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-07T11:06:20.082074Z",
-     "iopub.status.busy": "2022-10-07T11:06:20.081027Z",
-     "iopub.status.idle": "2022-10-07T11:06:20.089209Z",
-     "shell.execute_reply": "2022-10-07T11:06:20.088352Z"
+     "iopub.execute_input": "2022-10-07T12:11:01.000647Z",
+     "iopub.status.busy": "2022-10-07T12:11:00.999857Z",
+     "iopub.status.idle": "2022-10-07T12:11:01.012352Z",
+     "shell.execute_reply": "2022-10-07T12:11:01.010776Z"
     },
     "papermill": {
-     "duration": 0.015006,
-     "end_time": "2022-10-07T11:06:20.091109",
+     "duration": 0.021636,
+     "end_time": "2022-10-07T12:11:01.015245",
      "exception": false,
-     "start_time": "2022-10-07T11:06:20.076103",
+     "start_time": "2022-10-07T12:11:00.993609",
      "status": "completed"
     },
     "tags": []
@@ -158,19 +158,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3c795943",
+   "id": "65e96342",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-07T11:06:20.100660Z",
-     "iopub.status.busy": "2022-10-07T11:06:20.100304Z",
-     "iopub.status.idle": "2022-10-07T11:06:20.118701Z",
-     "shell.execute_reply": "2022-10-07T11:06:20.117617Z"
+     "iopub.execute_input": "2022-10-07T12:11:01.026549Z",
+     "iopub.status.busy": "2022-10-07T12:11:01.026079Z",
+     "iopub.status.idle": "2022-10-07T12:11:01.047949Z",
+     "shell.execute_reply": "2022-10-07T12:11:01.046527Z"
     },
     "papermill": {
-     "duration": 0.025895,
-     "end_time": "2022-10-07T11:06:20.121024",
+     "duration": 0.030395,
+     "end_time": "2022-10-07T12:11:01.050462",
      "exception": false,
-     "start_time": "2022-10-07T11:06:20.095129",
+     "start_time": "2022-10-07T12:11:01.020067",
      "status": "completed"
     },
     "tags": []
@@ -258,19 +258,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "448b0735",
+   "id": "4c065053",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-07T11:06:20.130690Z",
-     "iopub.status.busy": "2022-10-07T11:06:20.130310Z",
-     "iopub.status.idle": "2022-10-07T11:06:20.140752Z",
-     "shell.execute_reply": "2022-10-07T11:06:20.139742Z"
+     "iopub.execute_input": "2022-10-07T12:11:01.063085Z",
+     "iopub.status.busy": "2022-10-07T12:11:01.062687Z",
+     "iopub.status.idle": "2022-10-07T12:11:01.075137Z",
+     "shell.execute_reply": "2022-10-07T12:11:01.073739Z"
     },
     "papermill": {
-     "duration": 0.01748,
-     "end_time": "2022-10-07T11:06:20.142614",
+     "duration": 0.021467,
+     "end_time": "2022-10-07T12:11:01.077812",
      "exception": false,
-     "start_time": "2022-10-07T11:06:20.125134",
+     "start_time": "2022-10-07T12:11:01.056345",
      "status": "completed"
     },
     "tags": []
@@ -358,19 +358,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9b5053ec",
+   "id": "4c6cfbdb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-07T11:06:20.152422Z",
-     "iopub.status.busy": "2022-10-07T11:06:20.152100Z",
-     "iopub.status.idle": "2022-10-07T11:06:20.161233Z",
-     "shell.execute_reply": "2022-10-07T11:06:20.159832Z"
+     "iopub.execute_input": "2022-10-07T12:11:01.089768Z",
+     "iopub.status.busy": "2022-10-07T12:11:01.089330Z",
+     "iopub.status.idle": "2022-10-07T12:11:01.098484Z",
+     "shell.execute_reply": "2022-10-07T12:11:01.097275Z"
     },
     "papermill": {
-     "duration": 0.016949,
-     "end_time": "2022-10-07T11:06:20.163858",
+     "duration": 0.018141,
+     "end_time": "2022-10-07T12:11:01.101184",
      "exception": false,
-     "start_time": "2022-10-07T11:06:20.146909",
+     "start_time": "2022-10-07T12:11:01.083043",
      "status": "completed"
     },
     "tags": []
@@ -384,19 +384,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2274f9bd",
+   "id": "c54ec82e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-07T11:06:20.174881Z",
-     "iopub.status.busy": "2022-10-07T11:06:20.174547Z",
-     "iopub.status.idle": "2022-10-07T11:06:20.187800Z",
-     "shell.execute_reply": "2022-10-07T11:06:20.186292Z"
+     "iopub.execute_input": "2022-10-07T12:11:01.113496Z",
+     "iopub.status.busy": "2022-10-07T12:11:01.113018Z",
+     "iopub.status.idle": "2022-10-07T12:11:01.126517Z",
+     "shell.execute_reply": "2022-10-07T12:11:01.125414Z"
     },
     "papermill": {
-     "duration": 0.021841,
-     "end_time": "2022-10-07T11:06:20.190276",
+     "duration": 0.022449,
+     "end_time": "2022-10-07T12:11:01.128782",
      "exception": false,
-     "start_time": "2022-10-07T11:06:20.168435",
+     "start_time": "2022-10-07T12:11:01.106333",
      "status": "completed"
     },
     "tags": []
@@ -517,19 +517,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ee588e2a",
+   "id": "3b3d8544",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-07T11:06:20.200767Z",
-     "iopub.status.busy": "2022-10-07T11:06:20.200419Z",
-     "iopub.status.idle": "2022-10-07T11:06:20.207241Z",
-     "shell.execute_reply": "2022-10-07T11:06:20.206384Z"
+     "iopub.execute_input": "2022-10-07T12:11:01.141745Z",
+     "iopub.status.busy": "2022-10-07T12:11:01.140904Z",
+     "iopub.status.idle": "2022-10-07T12:11:01.150538Z",
+     "shell.execute_reply": "2022-10-07T12:11:01.149252Z"
     },
     "papermill": {
-     "duration": 0.014896,
-     "end_time": "2022-10-07T11:06:20.209744",
+     "duration": 0.018639,
+     "end_time": "2022-10-07T12:11:01.152905",
      "exception": false,
-     "start_time": "2022-10-07T11:06:20.194848",
+     "start_time": "2022-10-07T12:11:01.134266",
      "status": "completed"
     },
     "tags": []
@@ -564,19 +564,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b4272f5e",
+   "id": "99efe24b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-07T11:06:20.220383Z",
-     "iopub.status.busy": "2022-10-07T11:06:20.220054Z",
-     "iopub.status.idle": "2022-10-07T11:06:20.230671Z",
-     "shell.execute_reply": "2022-10-07T11:06:20.229757Z"
+     "iopub.execute_input": "2022-10-07T12:11:01.166965Z",
+     "iopub.status.busy": "2022-10-07T12:11:01.166029Z",
+     "iopub.status.idle": "2022-10-07T12:11:01.182694Z",
+     "shell.execute_reply": "2022-10-07T12:11:01.181343Z"
     },
     "papermill": {
-     "duration": 0.018121,
-     "end_time": "2022-10-07T11:06:20.232448",
+     "duration": 0.026155,
+     "end_time": "2022-10-07T12:11:01.185224",
      "exception": false,
-     "start_time": "2022-10-07T11:06:20.214327",
+     "start_time": "2022-10-07T12:11:01.159069",
      "status": "completed"
     },
     "tags": []
@@ -658,19 +658,19 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8887a6cf",
+   "id": "9b792556",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-07T11:06:20.243139Z",
-     "iopub.status.busy": "2022-10-07T11:06:20.242834Z",
-     "iopub.status.idle": "2022-10-07T11:06:20.522483Z",
-     "shell.execute_reply": "2022-10-07T11:06:20.521450Z"
+     "iopub.execute_input": "2022-10-07T12:11:01.199223Z",
+     "iopub.status.busy": "2022-10-07T12:11:01.198348Z",
+     "iopub.status.idle": "2022-10-07T12:11:01.692015Z",
+     "shell.execute_reply": "2022-10-07T12:11:01.690674Z"
     },
     "papermill": {
-     "duration": 0.287585,
-     "end_time": "2022-10-07T11:06:20.524660",
+     "duration": 0.503517,
+     "end_time": "2022-10-07T12:11:01.694893",
      "exception": false,
-     "start_time": "2022-10-07T11:06:20.237075",
+     "start_time": "2022-10-07T12:11:01.191376",
      "status": "completed"
     },
     "tags": []
@@ -679,7 +679,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f549fa50490>"
+       "<matplotlib.legend.Legend at 0x7fb2944c3b90>"
       ]
      },
      "execution_count": 11,
@@ -715,19 +715,19 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2c1c4ffe",
+   "id": "171bd5d3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-07T11:06:20.536438Z",
-     "iopub.status.busy": "2022-10-07T11:06:20.536123Z",
-     "iopub.status.idle": "2022-10-07T11:06:20.543978Z",
-     "shell.execute_reply": "2022-10-07T11:06:20.542581Z"
+     "iopub.execute_input": "2022-10-07T12:11:01.709817Z",
+     "iopub.status.busy": "2022-10-07T12:11:01.709376Z",
+     "iopub.status.idle": "2022-10-07T12:11:01.719870Z",
+     "shell.execute_reply": "2022-10-07T12:11:01.717958Z"
     },
     "papermill": {
-     "duration": 0.016156,
-     "end_time": "2022-10-07T11:06:20.546097",
+     "duration": 0.021302,
+     "end_time": "2022-10-07T12:11:01.722912",
      "exception": false,
-     "start_time": "2022-10-07T11:06:20.529941",
+     "start_time": "2022-10-07T12:11:01.701610",
      "status": "completed"
     },
     "tags": []
@@ -751,19 +751,19 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f5e78667",
+   "id": "b45d8dbc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-07T11:06:20.558870Z",
-     "iopub.status.busy": "2022-10-07T11:06:20.558471Z",
-     "iopub.status.idle": "2022-10-07T11:06:20.564474Z",
-     "shell.execute_reply": "2022-10-07T11:06:20.563897Z"
+     "iopub.execute_input": "2022-10-07T12:11:01.738749Z",
+     "iopub.status.busy": "2022-10-07T12:11:01.738317Z",
+     "iopub.status.idle": "2022-10-07T12:11:01.747627Z",
+     "shell.execute_reply": "2022-10-07T12:11:01.746234Z"
     },
     "papermill": {
-     "duration": 0.015175,
-     "end_time": "2022-10-07T11:06:20.566809",
+     "duration": 0.020449,
+     "end_time": "2022-10-07T12:11:01.750168",
      "exception": false,
-     "start_time": "2022-10-07T11:06:20.551634",
+     "start_time": "2022-10-07T12:11:01.729719",
      "status": "completed"
     },
     "tags": []
@@ -777,19 +777,19 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "83ebe07c",
+   "id": "abdcc77f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-07T11:06:20.580766Z",
-     "iopub.status.busy": "2022-10-07T11:06:20.579461Z",
-     "iopub.status.idle": "2022-10-07T11:06:20.584957Z",
-     "shell.execute_reply": "2022-10-07T11:06:20.584388Z"
+     "iopub.execute_input": "2022-10-07T12:11:01.765271Z",
+     "iopub.status.busy": "2022-10-07T12:11:01.764281Z",
+     "iopub.status.idle": "2022-10-07T12:11:01.771997Z",
+     "shell.execute_reply": "2022-10-07T12:11:01.770631Z"
     },
     "papermill": {
-     "duration": 0.015584,
-     "end_time": "2022-10-07T11:06:20.587871",
+     "duration": 0.018118,
+     "end_time": "2022-10-07T12:11:01.774699",
      "exception": false,
-     "start_time": "2022-10-07T11:06:20.572287",
+     "start_time": "2022-10-07T12:11:01.756581",
      "status": "completed"
     },
     "tags": []
@@ -813,19 +813,19 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "17286990",
+   "id": "d23b3eee",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-10-07T11:06:20.602029Z",
-     "iopub.status.busy": "2022-10-07T11:06:20.601708Z",
-     "iopub.status.idle": "2022-10-07T11:06:20.605687Z",
-     "shell.execute_reply": "2022-10-07T11:06:20.604791Z"
+     "iopub.execute_input": "2022-10-07T12:11:01.790668Z",
+     "iopub.status.busy": "2022-10-07T12:11:01.790232Z",
+     "iopub.status.idle": "2022-10-07T12:11:01.795338Z",
+     "shell.execute_reply": "2022-10-07T12:11:01.793897Z"
     },
     "papermill": {
-     "duration": 0.013669,
-     "end_time": "2022-10-07T11:06:20.608525",
+     "duration": 0.017166,
+     "end_time": "2022-10-07T12:11:01.798388",
      "exception": false,
-     "start_time": "2022-10-07T11:06:20.594856",
+     "start_time": "2022-10-07T12:11:01.781222",
      "status": "completed"
     },
     "tags": []
@@ -858,14 +858,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 10.528798,
-   "end_time": "2022-10-07T11:06:21.336281",
+   "duration": 13.532812,
+   "end_time": "2022-10-07T12:11:02.629905",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-10-07T11:06:10.807483",
+   "start_time": "2022-10-07T12:10:49.097093",
    "version": "2.3.4"
   }
  },
